public/static/css/main.css
/* ... */
.red ::selection {
  background: var(--red);
  -webkit-text-fill-color: #000;
  color: #000;
}

.orange ::selection {
  background: var(--orange);
  -webkit-text-fill-color: #000;
  color: #000;
}

.green ::selection {
  background: var(--green);
  -webkit-text-fill-color: #000;
  color: #000;
}

.cyan ::selection {
  background: var(--cyan);
  -webkit-text-fill-color: #000;
  color: #000;
}

/* Gradients
   ========================================================================== */

.gradient {
  background-size: 100%;
  background-clip: text;

  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
  -webkit-box-decoration-break: clone;
}

.gradient-yellow-pink {
  background-image: linear-gradient(
    var(--gradientDegree),
    var(--yellow) 0%,
    var(--pink) 100%
  );
}

.gradient-purple-cyan {
  background-image: linear-gradient(
    var(--gradientDegree),
    var(--purple) 0%,
    var(--cyan) 100%
  );
}

.gradient-pink-purple {
  background-image: linear-gradient(
    var(--gradientDegree),
    var(--pink) 0%,
    var(--purple) 100%
  );
}

.gradient-cyan-green {
  background-image: linear-gradient(
    var(--gradientDegree),
    var(--cyan) 0%,
    var(--green) 100%
  );
}

.gradient-purple-green {
  background-image: linear-gradient(
    var(--gradientDegree),
    var(--purple) 0%,
    var(--green) 100%
  );
}

/* Fonts
   ========================================================================== */

@font-face {
  font-family: "Neuzeit Grotesk Bold";
  src: url("/static/font/NeuzeitGrotesk-Bold.woff2") format("woff2"),
    url("/static/font/NeuzeitGrotesk-Bold.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Fira Code";
  src: url("/static/font/FiraCode-Regular.woff2") format("woff2"),
    url("/static/font/FiraCode-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Biotif";
  src: url("/static/font/Biotif-Bold.woff2") format("woff2"),
    url("/static/font/Biotif-Bold.woff") format("woff");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Biotif";
  src: url("/static/font/Biotif-SemiBold.woff2") format("woff2"),
    url("/static/font/Biotif-SemiBold.woff") format("woff");
  font-weight: 600;
  font-style: normal;
}

@font-face {
  font-family: "Biotif";
  src: url("/static/font/Biotif-Book.woff2") format("woff2"),
    url("/static/font/Biotif-Book.woff") format("woff");
  font-weight: 500;
  font-style: normal;
}

@font-face {
  font-family: "Biotif";
  src: url("/static/font/Biotif-Regular.woff2") format("woff2"),
    url("/static/font/Biotif-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Biotif";
  src: url("/static/font/Biotif-RegularItalic.woff2") format("woff2"),
    url("/static/font/Biotif-RegularItalic.woff") format("woff");
  font-weight: normal;
  font-style: italic;
}

